--- a/packages/plugins/migration-tool-serverless/package.json
+++ b/packages/plugins/migration-tool-serverless/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apilogic/migration-tool-serverless",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Serverless migration plugin",
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
-    "@apilogic/migration-tool-api": "1.0.1",
+    "@apilogic/migration-tool-api": "^1.0.2",
     "chalk": "^4.1.0"
   }
 }
