--- a/packages/plugins/migration-tool-api/package.json
+++ b/packages/plugins/migration-tool-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apilogic/migration-tool-api",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "composite": true,
   "description": "Universal sql/no-sql database serverless migration tool",
   "repository": {
@@ -36,5 +36,6 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.10.0"
-  }
+  },
+  "gitHead": "9017532ec0081458e7e88fb73aa3bc5e3d464f02"
 }
