--- a/packages/plugins/migration-tool-serverless/package.json
+++ b/packages/plugins/migration-tool-serverless/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apilogic/migration-tool-serverless",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Serverless migration plugin",
   "repository": {
     "type": "git",
@@ -35,7 +35,8 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
-    "@apilogic/migration-tool-api": "^1.0.2",
+    "@apilogic/migration-tool-api": "^1.0.3",
     "chalk": "^4.1.0"
-  }
+  },
+  "gitHead": "9017532ec0081458e7e88fb73aa3bc5e3d464f02"
 }
