--- a/packages/migration-tool-serverless/package.json
+++ b/packages/migration-tool-serverless/package.json
@@ -23,7 +23,7 @@
   ],
   "scripts": {
     "build": "npm run compile",
-    "clean": "rm -rf ./lib",
+    "clean": "rm -rf lib",
     "compile": "tsc -b tsconfig.build.json --force --verbose",
     "prepare": "npm run build"
   },
