--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/packages/playgrounds/migration/.serverless_plugins
+/playgrounds/migration/.serverless_plugins
 **/node_modules
-/packages/playgrounds/migration/.migrations_build
+/playgrounds/migration/.migrations_build
 **/lib
 **/tsconfig.tsbuildinfo
 **/tsconfig.build.tsbuildinfo
@@ -8,4 +8,4 @@
 /*.iml
 **/*.log
 /yarn.lock
-/packages/plugins/migration-tool-api/yarn.lock
+/packages/migration-tool-api/yarn.lock
