--- a/playgrounds/migration/tsconfig.json
+++ b/playgrounds/migration/tsconfig.json
@@ -12,7 +12,7 @@
     "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "baseUrl": "."
+    "baseUrl": "./"
   },
   "include": [],
   "references": []
