--- a/packages/migration-tool-api/package.json
+++ b/packages/migration-tool-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apilogic/migration-tool-api",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "composite": true,
   "description": "Universal sql/no-sql database serverless migration tool",
   "repository": {
@@ -35,7 +35,10 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^7.10.0"
+    "@elastic/elasticsearch": "^7.10.0",
+    "aws-sdk": "^2.828.0",
+    "elasticsearch": "^16.7.2",
+    "http-aws-es": "^6.0.0"
   },
   "gitHead": "8ea06a338d8536da3c0384fe89e86ae1ca0f56a9"
 }
