--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "playgrounds/*"
   ],
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
     "lerna": "^3.22.1",
     "typescript": "^4.1.3"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "publish": "lerna publish --exact"
+    "publish": "lerna publish --exact",
+    "lint": "eslint **/*.ts"
   },
   "dependencies": {
     "rimraf": "^3.0.2"
