--- a/packages/appsync-mappings/templates/infra.yml
+++ b/packages/appsync-mappings/templates/infra.yml
@@ -1,14 +1,14 @@
 - entity: hotel
   operations:
-    - type: TransactWriteItems
-      references:
-        - location
-        - hotel
-    - type: DeleteItem
-    - type: GetItem
-      references:
-        - entity: location
-        - entity: location
-          path: airports[].location
-        - entity: account
-          path: owner
+    - type: PutItem
+#    - type: TransactWriteItems
+#      references:
+#        - entity: location
+#        - entity: hotel
+#    - type: GetItem
+#      references:
+#        - entity: location
+#        - entity: location
+#          path: airports[].location
+#        - entity: account
+#          path: owner
