--- a/packages/appsync-mappings/package.json
+++ b/packages/appsync-mappings/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@angular-devkit/core": "^11.2.0",
     "@angular-devkit/schematics": "^11.2.0",
+    "@types/lodash": "^4.14.168",
     "jackson-js": "^1.1.0"
   },
   "devDependencies": {
