--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
   "packages": [
     "packages/migration-tool-api",
-    "packages/migration-tool-serverless"
+    "packages/migration-tool-serverless",
+    "packages/serverless-appsync-java-simulator"
   ],
   "version": "1.0.15"
 }
