mapping schematics put_items

--- a/packages/migration-tool-api/package.json
+++ b/packages/migration-tool-api/package.json
@@ -2,6 +2,7 @@
   "name": "@apilogic/migration-tool-api",
   "version": "1.0.16",
   "composite": true,
+  "private": false,
   "description": "Universal sql/no-sql database serverless migration tool",
   "repository": {
     "type": "git",
