--- a/packages/migration-tool-api/package.json
+++ b/packages/migration-tool-api/package.json
@@ -41,5 +41,8 @@
     "elasticsearch": "^16.7.2",
     "http-aws-es": "^6.0.0"
   },
-  "gitHead": "8a13d84f2d52085dbe277c9066631d99a6d94e43"
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "0c8fdb83d33fced3a2748dac1d83b2c73fcf3299"
 }
