--- a/packages/migration-tool-serverless/package.json
+++ b/packages/migration-tool-serverless/package.json
@@ -38,5 +38,8 @@
     "@apilogic/migration-tool-api": "^1.0.21",
     "chalk": "^4.1.0"
   },
-  "gitHead": "8a13d84f2d52085dbe277c9066631d99a6d94e43"
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "0c8fdb83d33fced3a2748dac1d83b2c73fcf3299"
 }
