--- a/packages/serverless-appsync-java-simulator/package.json
+++ b/packages/serverless-appsync-java-simulator/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "amplify-appsync-simulator": "^1.23.9",
     "amplify-java-function-runtime-provider": "^1.6.4",
+    "amplify-nodejs-function-runtime-provider": "^1.5.3",
     "aws-sdk": "^2.792.0",
     "axios": "^0.21.0",
     "babel-jest": "^26.6.3",
