--- a/packages/migration-tool-api/package.json
+++ b/packages/migration-tool-api/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.10.0",
+    "@opensearch-project/opensearch": "^1.0.2",
     "aws-sdk": "^2.828.0",
     "elasticsearch": "^16.7.2",
     "http-aws-es": "^6.0.0"
