--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,8 @@
   "packages": [
     "packages/migration-tool-api",
     "packages/migration-tool-serverless",
-    "packages/serverless-appsync-java-simulator"
+    "packages/serverless-appsync-java-simulator",
+    "packages/serverless-offline-builder"
   ],
   "version": "1.0.37"
 }
