--- a/packages/serverless-offline-builder/package.json
+++ b/packages/serverless-offline-builder/package.json
@@ -34,7 +34,8 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
-    "chalk": "^4.1.0"
+    "chalk": "^4.1.0",
+    "esbuild": "^0.14.23"
   },
   "publishConfig": {
     "access": "public"
