--- a/packages/migration-tool-api/package.json
+++ b/packages/migration-tool-api/package.json
@@ -4,6 +4,7 @@
   "composite": true,
   "private": false,
   "description": "Universal sql/no-sql database serverless migration tool",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/apilogic-io/serverless-plugins.git",
