--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,7 @@
 {
   "packages": [
-    "packages/migration-tool-api",
-    "packages/migration-tool-serverless",
-    "packages/serverless-appsync-java-simulator",
-    "packages/serverless-offline-builder"
+    "packages/*"
   ],
+  "useNx": true,
   "version": "1.0.50"
 }
