--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
   "packages": [
-    "packages/*"
+    "packages/migration-tool-api",
+    "packages/migration-tool-serverless",
+    "packages/serverless-appsync-java-simulator",
+    "packages/serverless-offline-builder"
   ],
   "useNx": true,
   "version": "1.0.52"
