--- a/packages/migration-tool-api/package.json
+++ b/packages/migration-tool-api/package.json
@@ -36,10 +36,8 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^7.10.0",
-    "@opensearch-project/opensearch": "^1.0.2",
+    "@opensearch-project/opensearch": "2.0.0",
     "aws-sdk": "^2.828.0",
-    "elasticsearch": "^16.7.2",
     "http-aws-es": "^6.0.0"
   },
   "publishConfig": {
