--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,8 @@
     "packages/migration-tool-api",
     "packages/migration-tool-serverless",
     "packages/serverless-appsync-java-simulator",
-    "packages/serverless-offline-builder"
+    "packages/serverless-offline-builder",
+    "packages/serverless-step-functions-offline"
   ],
   "useNx": true,
   "version": "1.1.14"
