--- a/packages/migration-tool-api/package.json
+++ b/packages/migration-tool-api/package.json
@@ -33,7 +33,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/fs-extra": "^9.0.6",
-    "ts-node": "^9.1.1"
+    "ts-node": "10.8.1"
   },
   "dependencies": {
     "@opensearch-project/opensearch": "2.2.0",
