--- a/packages/migration-tool-serverless/package.json
+++ b/packages/migration-tool-serverless/package.json
@@ -30,9 +30,9 @@
   "author": "Vitalie Robu",
   "license": "MIT",
   "devDependencies": {
-    "@types/serverless": "^1.78.18",
-    "serverless": "^2.18.0",
-    "ts-node": "^9.1.1"
+    "@types/serverless": "3.12.7",
+    "serverless": "^3.23.0",
+    "ts-node": "10.8.1"
   },
   "dependencies": {
     "@apilogic/migration-tool-api": "^1.1.14",
