--- a/packages/serverless-step-functions-offline/package.json
+++ b/packages/serverless-step-functions-offline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apilogic/serverless-step-functions-offline",
-  "version": "1.1.6",
+  "version": "1.2.0",
   "description": "Serverlesss plugin to support step function offline",
   "repository": {
     "type": "git",
@@ -28,10 +28,10 @@
   },
   "dependencies": {
     "dayjs": "^1.11.5",
-    "lodash": "^4.17.15",
-    "uuid": "^9.0.0",
     "esbuild": "^0.14.48",
-    "esbuild-node-externals": "^1.4.1"
+    "esbuild-node-externals": "^1.4.1",
+    "lodash": "^4.17.15",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.40",
