--- a/packages/serverless-step-functions-offline/package.json
+++ b/packages/serverless-step-functions-offline/package.json
@@ -34,14 +34,10 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.40",
     "@types/serverless": "3.12.7",
-    "asl-types": "^1.2.1",
-    "pre-commit": "^1.1.3",
-    "prettier": "2.6.2",
     "serverless": "^3.23.0",
     "ts-node": "10.8.1",
-    "typescript": "4.7.3"
+    "asl-types": "^1.2.1"
   },
   "license": "MIT",
   "publishConfig": {
