--- a/packages/serverless-step-functions-offline/package.json
+++ b/packages/serverless-step-functions-offline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apilogic/serverless-step-functions-offline",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Serverlesss plugin to support step function offline",
   "repository": {
     "type": "git",
@@ -35,9 +35,9 @@
   },
   "devDependencies": {
     "@types/serverless": "3.12.7",
+    "asl-types": "^1.2.1",
     "serverless": "^3.23.0",
-    "ts-node": "10.8.1",
-    "asl-types": "^1.2.1"
+    "ts-node": "10.8.1"
   },
   "license": "MIT",
   "publishConfig": {
