--- a/packages/serverless-appsync-java-simulator/package.json
+++ b/packages/serverless-appsync-java-simulator/package.json
@@ -25,41 +25,33 @@
     "/lib"
   ],
   "scripts": {
-    "lint": "eslint",
-    "build": "babel src/ -d lib/ --delete-dir-on-start --ignore '**/__tests__'",
-    "prepare": "npm run build",
-    "start-dev": "npm run build -w --verbose"
+    "build": "npm run compile",
+    "clean": "rm -rf lib",
+    "compile": "tsc -b tsconfig.build.json --force --verbose",
+    "prepare": "npm run build"
   },
   "author": "Vitalie Robu",
   "license": "MIT",
   "dependencies": {
-    "amplify-java-function-runtime-provider": "^1.6.4",
-    "amplify-nodejs-function-runtime-provider": "^1.5.3",
-    "aws-sdk": "^2.792.0",
-    "axios": "^0.21.0",
-    "babel-jest": "^26.6.3",
-    "cfn-resolver-lib": "^1.1.7",
+    "aws-sdk": "^2.1534.0",
+    "axios": "^1.6.5",
+    "esbuild": "^0.14.48",
+    "esbuild-node-externals": "^1.4.1",
+    "lodash": "^4.17.21",
+    "hjson": "^3.2.1",
+    "exit": "^0.1.2",
     "dataloader": "^2.0.0",
     "fb-watchman": "^2.0.1",
-    "jest": "^26.6.3",
-    "lodash": "^4.17.20",
-    "merge-graphql-schemas": "^1.5.8"
+    "merge-graphql-schemas": "^1.5.8",
+    "cfn-resolver-lib": "^1.1.8"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@semantic-release/git": "^9.0.0",
-    "all-contributors-cli": "^6.19.0",
-    "amplify-appsync-simulator": "^1.27.7",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-inline-import": "^3.0.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "prettier": "^2.2.1",
-    "semantic-release": "^17.3.0"
+    "@types/serverless": "3.12.7",
+    "asl-types": "^1.2.1",
+    "serverless": "^3.23.0",
+    "ts-node": "10.8.1",
+    "prettier": "^3.1.1",
+    "amplify-appsync-simulator": "^2.4.1"
   },
   "publishConfig": {
     "access": "public"
