--- a/packages/serverless-appsync-java-simulator/package.json
+++ b/packages/serverless-appsync-java-simulator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apilogic/serverless-appsync-java-simulator",
-  "version": "1.1.2",
+  "version": "1.2.12",
   "description": "Offline support for java serverless-appsync-plugin",
   "repository": {
     "type": "git",
@@ -35,23 +35,23 @@
   "dependencies": {
     "aws-sdk": "^2.1534.0",
     "axios": "^1.6.5",
+    "cfn-resolver-lib": "^1.1.8",
+    "dataloader": "^2.0.0",
     "esbuild": "^0.14.48",
     "esbuild-node-externals": "^1.4.1",
-    "lodash": "^4.17.21",
-    "hjson": "^3.2.1",
     "exit": "^0.1.2",
-    "dataloader": "^2.0.0",
     "fb-watchman": "^2.0.1",
-    "merge-graphql-schemas": "^1.5.8",
-    "cfn-resolver-lib": "^1.1.8"
+    "hjson": "^3.2.1",
+    "lodash": "^4.17.21",
+    "merge-graphql-schemas": "^1.5.8"
   },
   "devDependencies": {
     "@types/serverless": "3.12.7",
+    "amplify-appsync-simulator": "^2.4.1",
     "asl-types": "^1.2.1",
-    "serverless": "^3.23.0",
-    "ts-node": "10.8.1",
     "prettier": "^3.1.1",
-    "amplify-appsync-simulator": "^2.4.1"
+    "serverless": "^3.23.0",
+    "ts-node": "10.8.1"
   },
   "publishConfig": {
     "access": "public"
