--- a/packages/migration-tool-api/package.json
+++ b/packages/migration-tool-api/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.504.0",
     "@opensearch-project/opensearch": "^2.5.0",
-    "@travelhubx/aws": "^0.0.6"
+    "@travelhubx/aws": "0.0.11"
   },
   "publishConfig": {
     "access": "public"
